Add tests for JWE.parse().